--- a/views/css/cad.css
+++ b/views/css/cad.css
@@ -1,69 +1,145 @@
-#background{
-    background-image: url('../../img/teste2.png');
-    background-repeat: no-repeat; 
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    overflow: auto;
-    position: absolute;
-    background-position: center;
-    background-size: cover;
-    overflow-x: hidden;
-  }
-
-  @font-face {
-    font-family: LosingGrip;
-    src: url("../../fontes/LosingGripRegular-YxG4.ttf");
-  }
-
-  #container{
-    width: 100%;
-    height: 94%;
-    background-color: transparent;
-    position: fixed;
-    display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-around;
-    align-items: flex-end;
-  }
-  
-  #container2{
-    
-    width: 60%;
-    height: 100%;
-    /* background-image: radial-gradient(farthest-corner at 10px -10px, #976c43, #e0b68c); */
-    background: linear-gradient(#997755, 50%, #c7a27e );
-    /* border-top: solid 2px #126472;
-    border-bottom: solid 2px #126472; */
-
-    /* backdrop-filter: blur(2px);
-    -webkit-backdrop-filter: blur(2px); */
+main{
     position: relative;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow-x:hidden;
+    align-items: center;
+}
+h1{
+    position: relative;
+    margin-top: 20px;
+    text-align: center;
+    font-family: LosingGrip;
+    font-size: 200%;
+}
+#container{
+    width: 50%;
+    position: relative;
+    height: auto;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.515);
+    background: rgba(255, 204, 153, 0.3); 
+    border-radius: 20px;
+    padding: 0.5%;
+    border-collapse: separate;
+    border-spacing: 0px 5px;
+    overflow: hidden;
+}
+form{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    align-items: stretch; 
+    padding: 4%;
+}
+.agrupamento{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.grupo{
+    position: relative;
+    padding: 2.5%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.grupo label{
+    margin-right: 10px;
+    font-size: 120%;
+}
+
+select,input{
+    width: 100%;
+    height: 30px;
+    border-radius: 5px;
+    border: none;
+    background-color: white;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+textarea{
+    width: 100%;
+    border-radius: 5px;
+    border: none;
+    background-color: white;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+    resize: none; 
+}
+.botao{
+    position: relative;
+    width: 80%;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 120%;
+    margin-bottom: 0%;
+    border: solid 1px rgba(0, 0, 0, 0.45);
+    background-color: rgba(153, 204, 153, 0.47);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+}
+#imagem{
+    position: relative;
+    margin: 5%;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+  /* Área estilizada para upload */
+  .upload-label {
+    margin-top: 0%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    height: 80%;
+    border: 2px dashed #888;
+    border-radius: 10px;
+    cursor: pointer;
+    color: #555;
+    text-align: center;
+    font-family: Arial, sans-serif;
+    transition: all 0.3s ease;
   }
 
-  .titulo{
+  .upload-label:hover {
+    border-color: #444;
+    background: #f0f0f0;
+  }
+
+  .upload-label img {
+    width: 50px;
+    opacity: 0.6;
+    margin-bottom: 10px;
+  }
+/*  
+.titulo{
     position: relative;
     top: 10%;
     left: 20%;
     width: 100%;
     font-family: LosingGrip;
-  }
-  h1{
+}
+h1{
     color: #442020;
     font-size: 70px;
-  }
+}
 
-  form{
+form{
     position: relative;
     top: 18%;
     font-size: 25px;
     font-size: 280%;
     left: 13%;
     font-family: LosingGrip;
-  }
+}
 
-  .editText{
+.editText{
     width: 400px;
     font-size: 80%;
     position: relative;
@@ -72,9 +148,9 @@
     border-radius: 4%;
     border: solid 2px #524b46;
     left: 9px;
-  }
+}
 
-  .comboBox{
+.comboBox{
     width: 300px;
     font-size: 40px;
     position: relative;
@@ -83,42 +159,42 @@
     border-radius: 4%;
     border: solid 2px #524b46;
     left: 9px;
-  }
+}
 
-  .echo{
+.echo{
     position: relative;
     top: 40px;
     left: 17%;
     color: #ffffff;
     font-size: 25px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  }
+}
 
-  .container_botao{
+.container_botao{
     position: relative;
     margin-top: 50px;
     font-size: 90%;
     font-family: LosingGrip;
-  }
+}
 
-  .espaco{
+.espaco{
     position: relative;
     bottom: 20px;
-  }
+}
 
-  .botao{
+.botao{
     background-color: rgb(204, 180, 149);
     border-radius: 5%;
     border: solid 2px #524b46;
     box-shadow: 0px 0px 15px #2e2e2e54;
-  }
+}
 
-  p{
+p{
     font-size: 30px;
     font-family: cursive;
-  }
+}
 
-  
+
 
         nav{
             position: static;
@@ -145,4 +221,4 @@
         .dropdown-menu{
             background-color: #c29364;
             border: solid 1px #663707;
-        }
+        } */
