--- a/views/css/excluir.css
+++ b/views/css/excluir.css
@@ -1,5 +1,5 @@
 #background{
-    background-image: url('../../img/teste2.png');
+    background-image: url('../../img/fundo.jpg');
     background-repeat: no-repeat; 
     top: 0px;
     bottom: 0px;
