--- a/views/css/listas.css
+++ b/views/css/listas.css
@@ -1,123 +1,154 @@
-#background{
-    background-image: url('../../img/teste2.png');
-    background-repeat: no-repeat; 
-    top: 0px;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
-    overflow: auto;
-    position: absolute;
-    background-position: center;
-    background-size: cover;
-    overflow-x: hidden;
-  }
-  
-  #container{
-    width: 100%;
+    main{
+        position: relative;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        overflow-x:hidden;
+        align-items: center;
+    }
+    h1{
+        position: relative;
+        padding: 2.3%;
+        text-align: center;
+        font-family: LosingGrip;
+        font-size: 250%;
+    }
+    table{
+        width: 80%;
+        position: relative;
+        height: auto;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.515);
+        background: rgba(255, 204, 153, 0.3); 
+        border-radius: 20px;
+        padding: 0.5%;
+        border-collapse: separate;
+        border-spacing: 0px 5px;
+        overflow: hidden;
+    }
+    
+    .nome_td{
+        font-weight: bold;
+    }
+    .nome_td td{
+        padding: 10px;
+        text-align: center;
+    }
+    .variaveis td{
+        padding: 10px;
+        text-align: center;
+        border-top: solid 1px #955F5F;
+    }
+    a{
+        text-decoration: none;
+    }
+    .td_alt a{
+        color: #406F6F;
+    }
+    .td_ex a{
+        color: #C96262;
+    }
+    td{
+        border: none;
+        padding: 10px;
+        text-align: center;
+        color: #464646;
+    }
+    a:hover{
+        color: #ffffff;
+    }
+
+    /* 
+    td{
+    border: solid 3px #502d09;
     position: relative;
-    top: 240px;
-    box-shadow: 0px 0px 5px black;
-    height: auto;
-     background-color: #c29364; 
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    overflow-x:hidden;
-    /* background: linear-gradient(#997755, 50%, #c7a27e ); */
-  }
-  
-  td{
-  border: solid 3px #502d09;
-  position: relative;
-  text-align: center;
-  color: #442020;
-  font-family: LosingGrip;
-  font-size: 40px;
-  } 
-  .nomes_td{
-  background-color: #d29c65;
-  }
-  .variaveis{
-  background:  #e6ac73;
-  }
-  .td_id{
-  width: 100px;
-  } 
-  .td_desc{
-  width: 900px;
-  }
-  .td_cat{
-  width: 300px;
-  }
-  .td_aut{
-  width: 400px;
-  } 
-  .td_ed{
+    text-align: center;
+    color: #442020;
+    font-family: LosingGrip;
+    font-size: 40px;
+    } 
+    .nomes_td{
+    background-color: #d29c65;
+    }
+    .variaveis{
+    background:  #e6ac73;
+    }
+    .td_id{
+    width: 100px;
+    } 
+    .td_desc{
+    width: 900px;
+    }
+    .td_cat{
+    width: 300px;
+    }
+    .td_aut{
     width: 400px;
     } 
-    .td_ti{
-        width: 300px;
+    .td_ed{
+        width: 400px;
         } 
-  
-  .titulo{
-  top: 60px;
-  position: relative;
-  text-align: center;
-  width: 100%;
-  font-family: LosingGrip;
-  }
-  h1{
-  color: #442020;
-  font-size: 80px;
-  }
-  a{
-  color:#3a3a3a;
-  text-decoration: none;
-  }
-  a:hover{
-  color:#757575;
-  }
-  
-  
-  @font-face {
+        .td_ti{
+            width: 300px;
+            } 
+    
+    .titulo{
+    top: 60px;
+    position: relative;
+    text-align: center;
+    width: 100%;
     font-family: LosingGrip;
-    src: url("../../fontes/LosingGripRegular-YxG4.ttf");
-  }
-  
-        nav{
-            position: static;
-            box-shadow: 0px 0px 15px black;
-            background-image: radial-gradient(farthest-corner at 50px -10px, #976c43, #c29971);
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
-  
-        .navbar-brand{
-            margin-left: 6px;
-            text-shadow: 1px 1px 10px #757575;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
-  
-        .dropdown-item{
-            color: #663707;
-            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        }
-  
-        .dropdown-item:hover{
-            background-color: #e6bc92;
-        }
-  
-        .dropdown-menu{
-            background-color: #c29364;
-            border: solid 1px #663707;
-        }
-        #lista{
-          position: relative;
-          top: 60px;
-          background-color: transparent;
-          overflow-y: auto;
-          margin-bottom: 80px;
-          overflow-x: hidden;
-          font-size: 40px;
-          font-family: LosingGrip;
-        }
+    }
+    h1{
+    color: #442020;
+    font-size: 80px;
+    }
+    a{
+    color:#3a3a3a;
+    text-decoration: none;
+    }
+    a:hover{
+    color:#757575;
+    }
+    
+    
+    @font-face {
+        font-family: LosingGrip;
+        src: url("../../fontes/LosingGripRegular-YxG4.ttf");
+    }
+    
+            nav{
+                position: static;
+                box-shadow: 0px 0px 15px black;
+                background-image: radial-gradient(farthest-corner at 50px -10px, #976c43, #c29971);
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+    
+            .navbar-brand{
+                margin-left: 6px;
+                text-shadow: 1px 1px 10px #757575;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+    
+            .dropdown-item{
+                color: #663707;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+            }
+    
+            .dropdown-item:hover{
+                background-color: #e6bc92;
+            }
+    
+            .dropdown-menu{
+                background-color: #c29364;
+                border: solid 1px #663707;
+            }
+            #lista{
+            position: relative;
+            top: 60px;
+            background-color: transparent;
+            overflow-y: auto;
+            margin-bottom: 80px;
+            overflow-x: hidden;
+            font-size: 40px;
+            font-family: LosingGrip;
+            } */
